--- a/HomeEstate/requirements.txt
+++ b/HomeEstate/requirements.txt
@@ -7,7 +7,9 @@ django-cors-headers==4.6.0
 django-environ==0.12.0
 django-rest-knox==5.0.2
 djangorestframework==3.15.2
+gunicorn==23.0.0
 idna==3.10
+packaging==24.2
 pillow==11.1.0
 psycopg2==2.9.10
 python-barcode==0.15.1
